@@ -50,6 +50,12 @@
 	  <command>named</command> could crash with an assertion failure
 	  if the name of a database node was looked up while the database
 	  was being modified. [GL #1857]
+	</para>
+      </listitem>
+      <listitem>
+        <para>
+          Missing mutex and conditional destruction in netmgr code leads to a
+          memory leak on *BSD systems. [GL #1893].
         </para>
       </listitem>
     </itemizedlist>
